--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,7 @@ aiomysql==0.2.0
 redis~=4.6.0
 pydantic==2.5.2
 aiofiles~=23.2.1
-fastapi==0.110.2
-uvicorn==0.29.0
+
 python-dotenv==1.0.1
 jieba==0.42.1
 wordcloud==1.9.3
@@ -17,3 +16,5 @@ requests==2.32.3
 parsel==1.9.1
 pyexecjs==1.5.1
 pandas==2.2.3
+numpy==2.2.6
+sniffio>=1.3.0
